metadata/force-app/main/default/objects/CustomName_FzIXz__c/CustomName_FzIXz__c.object-meta.xml
<CustomObject>
    <description>Description_Mnlil</description>
    <label>CustomLabel_alIhY</label>
    <nameField>
        <label>CustomLabel_alIhY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_alIhYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>