metadata/force-app/main/default/objects/CustomName_FzIXz__c/fields/CustomField_HqPmz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HqPmz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkeXrM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>